# sol-desktop-wallet

./: LICENSE.md  README.md  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  config.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: account_store.rs  api.rs  config.rs  main.rs
src/components/: AppDrawer.tsx  ApproveDialog.tsx  NigthlyConnectDialog.tsx  TransferDialog.tsx
src/context/: ConnectionProvider.tsx  NightlyConnectProvider.tsx  WalletAccountsProvider.tsx  WalletProvider.tsx
src/hooks/: useOffchainMetadataLoader.ts  usePriceInfos.ts  useUserBalance.ts
src/lib/: token-map.ts
src/lib/api/: internal.tsx
src/lib/nft/: off-chain-metadata.ts
src/pages/: Dev.tsx  Home.tsx  Nfts.tsx  SelectAccount.tsx  Settings.tsx
src/tools/: address.ts  connection-tools.ts  token.ts
src/tools/nft/: nft.ts
