[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["clipboard-write-text", "dialog-message", "dialog-open", "fs-read-dir", "fs-read-file", "http-all", "path-all", "shell-open"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/tauri-plugin-store", rev = "4326f75446b8b9e0cb9904c65f258b81e23e544e" }
tauri-plugin-fs-watch = { git = "https://github.com/tauri-apps/tauri-plugin-fs-watch", rev = "44e0bb889b78cd6e6fa6255b3d39b8637cda98bd" }
names = { version = "0.14.0", default-features = false }
anyhow = "1.0.64"
solana-sdk = "1.14.5"
tiny-bip39 = "0.8.2"
bincode = "1.3.3"
base64 ="0.13.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
